[metadata]
name = pyblog
version = 0.0.1

[options]
install_requires =
    jinja2
    markdown
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    pyblog = pyblog.command_line:execute

[options.package_data]
pyblog.data =
    style.css
pyblog.data.templates =
    *.html